# fixturecast2

./: .dockerignore  .env.example  .env.twitter.example  .gitignore  .pre-commit-config.yaml  ALL_FEATURES_COMPLETE.md  BOT_AUTOMATION_GUIDE.md  BOT_QUICK_REFERENCE.md  BUGFIXES_COMPLETE.md  CHANGELOG.md  COMPLETE_SYSTEM_READY.md  CONTINUOUS_TRAINING.md  DEPLOY.md  DEPLOYMENT.md  Dockerfile  Dockerfile.backend  FEATURES_IMPLEMENTED.md  FINETUNING_FRONTEND_COMPLETE.md  FORM_ANALYSIS.md  FULL_SYSTEM_COMPLETE.md  GITHUB_ACTIONS_SETUP.md  IMPROVEMENTS_COMPLETE.md  LEAGUE_CATEGORIZATION.md  LOGIC_ANALYSIS.md  METRICS_DASHBOARD_COMPLETE.md  METRICS_IMPLEMENTATION.md  METRICS_QUICK_REFERENCE.md  ML_ENSEMBLE_PHASE1_COMPLETE.md  ML_TRAINING_API_COMPLETE.md  MOBILE_OPTIMIZATION.md  PHASE2A_STATUS.md  PHASE2B_COMPLETE.md  PREDICTION_GENERATION_PROCESS.md  PREDICTION_IMPROVEMENTS.md  PREDICTION_STATUS.md  PROJECT_STATUS.md  Procfile  QUICK_DEPLOY.md  RAILWAY_BOT_DEPLOYMENT.md  RAILWAY_CLI_GUIDE.md  (+36 more)
backend/: analysis_llm.py  api_client.py  auto_result_updater.py  backend_api.py  backtest_history.json  collect_history.py  collect_multi_league_history.py  config.json  database.py  main.py  metrics_api.py  metrics_tracker.py  ml_api.py  ml_api_impl.py  og_image_generator.py  prediction_stats.json  safe_feature_builder.py  test_metrics_integration.py
frontend/: .env.development  .env.production  index.html  package-lock.json  package.json  tailwind.config.js  wrangler.toml
ml_engine/: advanced_features.py  auto_update_results.py  backtest_weekly.py  bayesian_model.py  calibration.py  (+25 more)
(+100 files in other folders)
